dd-endpoint uri cache jmh setup

--- a/test/ddb-benchmarks/src/main/resources/log4j2.properties
+++ b/test/ddb-benchmarks/src/main/resources/log4j2.properties
@@ -23,19 +23,14 @@ appender.console.layout.pattern = %d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %
 rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = ConsoleAppender
 
-logger.cache.name = software.amazon.awssdk.utils.uri.SdkURI
-logger.cache.level = trace
+#logger.cache.name = software.amazon.awssdk.utils.uri.SdkURI
+#logger.cache.level = trace
 
-# Uncomment below to enable more specific logging
-#
-#logger.sdk.name = software.amazon.awssdk
-#logger.sdk.level = debug
-#
 #logger.request.name = software.amazon.awssdk.request
 #logger.request.level = debug
-#
+
 #logger.apache.name = org.apache.http.wire
 #logger.apache.level = debug
-#
+
 #logger.netty.name = io.netty.handler.logging
 #logger.netty.level = debug
