--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <module>test/crt-unavailable-tests</module>
         <module>test/architecture-tests</module>
         <module>test/s3-tests</module>
+        <module>test/ddb-benchmarks</module>
     </modules>
     <scm>
         <url>${scm.github.url}</url>
