enable credentials logs

--- a/test/ddb-benchmarks/src/main/resources/log4j2.properties
+++ b/test/ddb-benchmarks/src/main/resources/log4j2.properties
@@ -23,6 +23,9 @@ appender.console.layout.pattern = %d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %
 rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = ConsoleAppender
 
+logger.creds.name = software.amazon.awssdk.auth.credentials
+logger.creds.level = debug
+
 #logger.cache.name = software.amazon.awssdk.utils.uri.SdkURI
 #logger.cache.level = trace
 
