direct cache benchmark

--- a/test/ddb-benchmarks/src/main/resources/log4j2.properties
+++ b/test/ddb-benchmarks/src/main/resources/log4j2.properties
@@ -26,8 +26,8 @@ rootLogger.appenderRef.stdout.ref = ConsoleAppender
 logger.creds.name = software.amazon.awssdk.auth.credentials
 logger.creds.level = debug
 
-#logger.cache.name = software.amazon.awssdk.utils.uri.SdkURI
-#logger.cache.level = trace
+logger.cache.name = software.amazon.awssdk.utils.uri.SdkURI
+logger.cache.level = info
 
 #logger.request.name = software.amazon.awssdk.request
 #logger.request.level = debug
