--- a/test/ddb-benchmarks/pom.xml
+++ b/test/ddb-benchmarks/pom.xml
@@ -239,7 +239,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>org.openjdk.jmh.Main</Main-Class>
+                                        <Main-Class>software.amazon.awssdk.benchmark.SdkUriCacheBenchmark</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                                 <!-- This is important to run h2 server -->
